Medical action execution aborting done.